--- a/csirt.divd.nl/_config.yml
+++ b/csirt.divd.nl/_config.yml
@@ -8,6 +8,7 @@ language: nl-nl
 
 title: Nederlands Security Meldpunt
 description: Het Nederlandse meldpunt voor kwetsbaarheden, infecties en andere (cyber)security gerelateerde zaken.
+repository: DIVD-NL/sites
 
 timezone: Europe/Amsterdam
 future: true
