--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command: |
             gem install html-proofer &&
             htmlproofer --allow-hash-href www.divd.nl/_site/ &&
-            htmlproofer --allow-hash-href csirt.divd.nl/_site/ &&
+            htmlproofer --allow-hash-href csirt.divd.nl/_site/
       - save_cache:
           key: jekyll-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -50,12 +50,12 @@ jobs:
           command: |
             mkdir ~/.ssh;
             echo  "upload.bit.nl,213.136.12.217 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBIVx+0N0LECcGHPywPCk9uz4/l3kNUVNe5QQRleIkMCTarkYauvRrPNPl49x3LIjF6cZsmQZX7jwgsJqEzfcF98=" > ~/.ssh/known_hosts;
-            cd /root/project/
-            sshpass -e rsync -av .htaccess www-divd@upload.bit.nl:htdocs
-            cd /root/project/csirt.divd.nl/_site
-            sshpass -e rsync -av . www-divd@upload.bit.nl:htdocs/securitymeldpunt-nl
-            cd /root/project/www.divd.nl/_site
-            sshpass -e rsync -av . www-divd@upload.bit.nl:htdocs/divd-nl
+            cd /root/project/;
+            sshpass -e rsync -av .htaccess www-divd@upload.bit.nl:htdocs;
+            cd /root/project/csirt.divd.nl/_site;
+            sshpass -e rsync -av . www-divd@upload.bit.nl:htdocs/securitymeldpunt-nl;
+            cd /root/project/www.divd.nl/_site;
+            sshpass -e rsync -av . www-divd@upload.bit.nl:htdocs/divd-nl;
 
 workflows:
   version: 2
