--- a/.htaccess
+++ b/.htaccess
@@ -15,8 +15,8 @@ RewriteRule (.*) divd-nl/$1 [L]
 
 RewriteCond %{HTTP_HOST} ^bit\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.securitymeldpunt\.nl [NC,OR]
-RewriteCond %{HTTP_HOST} ^securitymeldpunt\.nl [NC]
-RewriteCond %{HTTP_HOST} ^csirt\.divid\.nl [NC]
+RewriteCond %{HTTP_HOST} ^securitymeldpunt\.nl [NC,OR]
+RewriteCond %{HTTP_HOST} ^csirt\.divid\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.csirt\.divid\.nl [NC]
 RewriteCond %{REQUEST_URI} !^/securitymeldpunt-nl [NC]
 RewriteRule (.*) securitymeldpunt-nl/$1 [L]
