Meldpunt -> CSIRT step 1

--- a/.htaccess
+++ b/.htaccess
@@ -16,7 +16,7 @@ RewriteRule (.*) divd-nl/$1 [L]
 RewriteCond %{HTTP_HOST} ^bit\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^securitymeldpunt\.nl [NC,OR]
-RewriteCond %{HTTP_HOST} ^csirt\.divid\.nl [NC,OR]
-RewriteCond %{HTTP_HOST} ^www\.csirt\.divid\.nl [NC]
+RewriteCond %{HTTP_HOST} ^csirt\.divd\.nl [NC,OR]
+RewriteCond %{HTTP_HOST} ^www\.csirt\.divd\.nl [NC]
 RewriteCond %{REQUEST_URI} !^/securitymeldpunt-nl [NC]
 RewriteRule (.*) securitymeldpunt-nl/$1 [L]
