--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,15 @@
 RewriteEngine On
 
+# Redirect http to https
 RewriteCond %{HTTP:X-HTTPS-SESSION} !^yes$
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
+# Make sure the envionment knows we are using HTTPS
 SetEnvIfNoCase X-HTTPS-Session Yes is_ssl=yes
 SetEnvIfNoCase X-HTTPS-Session Yes is_https=yes
 SetEnvIfNoCase X-HTTPS-Session Yes HTTPS=on
 
+# Serve DIVD main site from directory /divd-nl
 RewriteCond %{HTTP_HOST} ^bit\.divd\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.divd\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^divd\.nl [NC]
@@ -16,7 +19,10 @@ RewriteRule (.*) divd-nl/$1 [L]
 RewriteCond %{HTTP_HOST} ^bit\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^securitymeldpunt\.nl [NC,OR]
+RewriteRule ^(.*) https://csirt.divd.nl/$1 [R=301,L]
+
+# Serve csirt site from csirt dir
 RewriteCond %{HTTP_HOST} ^csirt\.divd\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^www\.csirt\.divd\.nl [NC]
 RewriteCond %{REQUEST_URI} !^/securitymeldpunt-nl [NC]
-RewriteRule (.*) securitymeldpunt-nl/$1 [L]
+RewriteRule (.*) csirt-divd-nl/$1 [L]
