--- a/.htaccess
+++ b/.htaccess
@@ -8,20 +8,21 @@ SetEnvIfNoCase X-HTTPS-Session Yes is_ssl=yes
 SetEnvIfNoCase X-HTTPS-Session Yes is_https=yes
 SetEnvIfNoCase X-HTTPS-Session Yes HTTPS=on
 
-# Redirect securitymeldpunt to csirt
-RewriteCond %{HTTP_HOST} ^bit\.securitymeldpunt\.nl [NC,OR]
+# Redirect securitymeldpunt and www.cisrt to csirt
 RewriteCond %{HTTP_HOST} ^www\.securitymeldpunt\.nl [NC,OR]
 RewriteCond %{HTTP_HOST} ^securitymeldpunt\.nl [NC]
 RewriteRule (.*) https://csirt.divd.nl/$1 [r=301,L]
 
-# Serve www from divd-nl
-RewriteCond %{HTTP_HOST} ^www\.divd\.nl [NC,OR]
+# recirect divd.nl to www
 RewriteCond %{HTTP_HOST} ^divd\.nl [NC]
+RewriteRule (.*) https://www.divd.nl/$1 [r=301,L]
+
+# Serve www from divd-nl
+RewriteCond %{HTTP_HOST} ^www\.divd\.nl [NC]
 RewriteCond %{REQUEST_URI} !^/divd-nl [NC]
 RewriteRule (.*) divd-nl/$1 [L]
 
 # Serve csirt from csirt-divd-nl
-RewriteCond %{HTTP_HOST} ^csirt\.divd\.nl [NC,OR]
-RewriteCond %{HTTP_HOST} ^www\.csirt\.divd\.nl [NC]
+RewriteCond %{HTTP_HOST} ^csirt\.divd\.nl [NC]
 RewriteCond %{REQUEST_URI} !^/csirt-divd-nl [NC]
 RewriteRule (.*) csirt-divd-nl/$1 [L]
