Shared team database between csirt and www Each team member has a page This page now shows the pasts on www.divd.nl and csirt.divd.nl Reasearchers are also credited

--- a/csirt.divd.nl/_config.yml
+++ b/csirt.divd.nl/_config.yml
@@ -34,3 +34,14 @@ jekyll-secinfo:
 webrick:
   headers:
     Content-Security-Policy: default-src 'none'; font-src 'self' https://fonts.gstatic.com; img-src 'self'; script-src 'self' ; style-src 'self' https://fonts.googleapis.com/;
+
+# Collections
+collections:
+  team:
+    output: true
+
+exclude:
+  - README.md
+  - serve*
+  - "*.sh"
+  - .keep
