--- a/www.divd.nl/_config.yml
+++ b/www.divd.nl/_config.yml
@@ -37,7 +37,10 @@ collections:
     output: false
     permalink: "/:year/:month/:day/:title/"
 
-
+# Custom headers
+webrick:
+  headers:
+    Content-Security-Policy: default-src 'none'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; script-src 'self' ; style-src 'self' https://fonts.googleapis.com/; connect-src 'self';
 
 exclude:
   - README.md
