Give persons credits for CVEs

--- a/www.divd.nl/_config.yml
+++ b/www.divd.nl/_config.yml
@@ -33,6 +33,8 @@ collections:
     output: true
   cases:
     output: false
+  cves:
+    output: false
   csirt_posts:
     output: false
     permalink: "/:year/:month/:day/:title/"
