--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
                 gem install jekyll-secinfo
                 ./update.sh
                 jekyll build 2>&1|grep -v 'warning:';
-                ./minify.sh
+                #./minify.sh
                 ./proof_html.sh 
               ) 
             done
