--- a/csirt.divd.nl/_data/navigation.yml
+++ b/csirt.divd.nl/_data/navigation.yml
@@ -11,12 +11,14 @@
   link: /cves/
 - name: Blog
   link: /blog/
-- name: Over ons
-  link: /over-ons/
-- name: FAQ
-  link: /faq/
-- name: Helpen? 
-  link: /faq/15-helpen/
+- name: Donate
+  link: https://www.divd.nl/donate/
+#- name: Over ons
+#  link: /over-ons/
+#- name: FAQ
+#  link: /faq/
+#- name: Helpen? 
+#  link: /faq/15-helpen/
 - name: RSS
   link: /feed.xml
 - name: Contact
