--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,9 @@ jobs:
             cd /root/project/;
             sshpass -e rsync -av .htaccess www-divd@upload.bit.nl:htdocs;
             cd /root/project/csirt.divd.nl/_site;
-            sshpass -e rsync -av . www-divd@upload.bit.nl:htdocs/csirt-divd-nl;
+            sshpass -e rsync -av --delete . www-divd@upload.bit.nl:htdocs/csirt-divd-nl;
             cd /root/project/www.divd.nl/_site;
-            sshpass -e rsync -av "--exclude=data/*" . www-divd@upload.bit.nl:htdocs/divd-nl;
+            sshpass -e rsync -av "--exclude=data/*" --delete . www-divd@upload.bit.nl:htdocs/divd-nl;
 
 workflows:
   version: 2
