--- a/csirt.divd.nl/_config.yml
+++ b/csirt.divd.nl/_config.yml
@@ -32,7 +32,7 @@ jekyll-secinfo:
 # Custom headers
 webrick:
   headers:
-    Content-Security-Policy: default-src 'none'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; script-src 'self' ; style-src 'self' https://fonts.googleapis.com/; connect-src 'self';
+    Content-Security-Policy: default-src 'none'; font-src 'self'; img-src 'self' data:; script-src 'self' ; style-src 'self'; connect-src 'self';
 
 # Collections
 collections:
