--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,19 @@ jobs:
             for site in www.divd.nl csirt.divd.nl; do
               ( 
                 echo "*** Building and checking $site ***"; 
-                cd $site;
-                gem install jekyll-secinfo
+                cd $site
                 ./update.sh
-                jekyll build 2>&1|grep -v 'warning:';
+                cp -r * /srv/jekyll
+                cd /srv/jekyll;
+                echo "Running bundle install (be patient)"scanning
+                bundle install
+                bundle exec jekyll build 2>&1
                 ./proof_html.sh 
+                mkdir -p /www
+                mv _site /www/$site
               ) 
             done
+            cp .htaccess /www
       - save_cache:
           key: jekyll-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -48,11 +54,11 @@ jobs:
           command: |
             mkdir -p ~/.ssh;
             echo  "upload.bit.nl,213.136.12.217 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBIVx+0N0LECcGHPywPCk9uz4/l3kNUVNe5QQRleIkMCTarkYauvRrPNPl49x3LIjF6cZsmQZX7jwgsJqEzfcF98=" > ~/.ssh/known_hosts;
-            cd /root/project/;
+            cd /www;
             rsync -av .htaccess www-divd@upload.bit.nl:htdocs;
-            cd /root/project/csirt.divd.nl/_site;
+            cd /www/csirt.divd.nl/_site;
             rsync -av --delete . www-divd@upload.bit.nl:htdocs/csirt-divd-nl;
-            cd /root/project/www.divd.nl/_site;
+            cd /www/www.divd.nl/_site;
             rsync -av "--exclude=data/*" --delete . www-divd@upload.bit.nl:htdocs/divd-nl;
 
 workflows:
