--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .bundle
 .bundle-cache
-.jekyll-metadata
+.jekyll-metadata/
+.jekyll-cache/
 .sass-cache/
 .DS_Store
 Gemfile.lock
@@ -10,3 +11,4 @@ csirt.divd.nl/_team/
 www.divd.nl/_cases/
 www.divd.nl/_csirt_posts/
 www.divd.nl/_cves/
+*.bak
