--- a/csirt.divd.nl/_config.yml
+++ b/csirt.divd.nl/_config.yml
@@ -14,6 +14,7 @@ timezone: Europe/Amsterdam
 future: true
 encoding: utf-8
 
+
 permalink: pretty
 markdown: kramdown
 show_downloads: false
@@ -43,6 +44,14 @@ collections:
     output: true
   cases:
     output: true
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"    
+
 
 exclude:
   - README.md
