--- a/www.divd.nl/_config.yml
+++ b/www.divd.nl/_config.yml
@@ -45,6 +45,13 @@ webrick:
   headers:
     Content-Security-Policy: "default-src 'none'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; script-src 'self'; style-src 'self'; connect-src 'self';"
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"    
+
 exclude:
   - README.md
   - serve*
