Adding last modified dates to certain posts (based on git timestamp)

--- a/csirt.divd.nl/_config.yml
+++ b/csirt.divd.nl/_config.yml
@@ -26,6 +26,7 @@ plugins:
   - jekyll-redirect-from
   - jekyll-secinfo
   - jekyll-paginate
+  - jekyll-last-modified-at
 
 jekyll-secinfo:
   divd:
