--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
               ( 
                 echo "*** Building and checking $site ***"; 
                 cd $site;
-                gem install -N jekyll-secinfo jekyll-last_modified-at
+                gem install -N jekyll-secinfo jekyll-last-modified-at
                 ./update.sh
                 jekyll build 2>&1|grep -v 'warning:';
                 ./proof_html.sh 
