--- a/csirt.divd.nl/.htaccess
+++ b/csirt.divd.nl/.htaccess
@@ -4,3 +4,4 @@ Header set X-Content-Type-Options nosniff
 Header set X-XSS-Protection "1; mode=block"
 Header set Content-Security-Policy "default-src 'none'; font-src 'self'; img-src 'self'; script-src 'self' ; style-src 'self'"
 Header always set Referrer-Policy "same-origin"
+ErrorDocument 404 /404.html
