--- a/www.divd.nl/.htaccess
+++ b/www.divd.nl/.htaccess
@@ -5,3 +5,5 @@ Header set X-XSS-Protection "1; mode=block"
 Header set Content-Security-Policy "default-src 'none'; font-src 'self'; img-src 'self' data:; script-src 'self' ; style-src 'self'; connect-src 'self';"
 
 Header always set Referrer-Policy "same-origin"
+
+ErrorDocument 404 /404.html
