--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
                 gem install -N jekyll-secinfo jekyll-last-modified-at
                 ./update.sh
                 # Removing some stubs
-                rm -f _cves/CVE-2022-21907.md
+                rm -f _cves/CVE-3000-*
                 rm -rf _cases/DIVD-3000-0000*
                 jekyll build 2>&1| tee jekyll-build.log;
                 ./proof_html.sh 
