No need to execlude data here

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
             rsync -av --delete .well-known www-divd@upload.bit.nl:htdocs/csirt-divd-nl/.well-known;
             cd /root/project/www.divd.nl/_site;
             rsync -av "--exclude=data/*" --delete . www-divd@upload.bit.nl:htdocs/divd-nl;
-            rsync -av "--exclude=data/*" --delete .well-known www-divd@upload.bit.nl:htdocs/divd-nl/.well-knonw;
+            rsync -av --delete .well-known www-divd@upload.bit.nl:htdocs/divd-nl/.well-knonw;
 
 workflows:
   version: 2
