Now proof should work again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
             gem install -N jekyll-secinfo jekyll-last-modified-at
             ./update.sh
             # Removing some stubs
-            rm -f _cves/CVE-3000-*
-            rm -rf _cases/DIVD-3000-0000*
+            rm -f _cves/CVE-3000-* csirt.divd.nl/_cves/CVE-3000-*
+            rm -rf _cases/DIVD-3000-0000* csirt.divd.nl/_cases/DIVD-3000-0000*
             jekyll build 2>&1| tee jekyll-build.log;
             ./proof_html.sh 
       - save_cache:
