--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,9 @@
 Gemfile.lock
 _site/
 .env
-csirt.divd.nl/_team/
-www.divd.nl/_cases/
-www.divd.nl/_csirt_posts/
-www.divd.nl/_cves/
-www.divd.nl/_data/scanners.yml
+_team/
+www.divd.nl/
 *.bak
 *.log
-*/_config_livereload.yml
+_config_livereload.yml
 *:Zone.Identifier
