Added options for department

--- a/.forestry/front_matter/templates/team-member.yml
+++ b/.forestry/front_matter/templates/team-member.yml
@@ -16,7 +16,12 @@ fields:
   default: ''
   config:
     required: false
-    options: []
+    options: 
+      - Academy
+      - CSIRT
+      - Institute
+      - IT services
+      - Research
     source:
       type: simple
       section: 
