--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,13 @@ jobs:
           name: Build and check
           command: |
             echo "*** Building and checking ***"; 
-            gem install -N jekyll-secinfo jekyll-last-modified-at
+            #gem install -N jekyll-secinfo jekyll-last-modified-at
+            bundle install
             ./update.sh
             # Removing some stubs
             rm -f _cves/CVE-3000-* csirt.divd.nl/_cves/CVE-3000-*
             rm -rf _cases/DIVD-3000-0000* csirt.divd.nl/_cases/DIVD-3000-0000*
-            jekyll build 2>&1| tee jekyll-build.log;
+            bundle exec jekyll build 2>&1| tee jekyll-build.log;
             ./proof_html.sh 
       - save_cache:
           key: jekyll-{{ .Environment.CIRCLE_SHA1 }}
