--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
-version: 2
+version: '2.1'
+orbs:
+  slack: circleci/slack@4.1
+workflows:
+  send-notification:
+    jobs:
+      - notify:
+          context: slack-secrets
 jobs:
-
   build:
     docker:
       - image: mrseccubus/github-pages:latest
@@ -23,6 +29,23 @@ jobs:
           key: jekyll-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - "/root/project/_site"
+      - slack/notify:
+          event: fail
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*CircelCI buid job has failed for web-www*",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
 
   upload:
     docker:
@@ -52,7 +75,8 @@ workflows:
   version: 2
   build_and_upload:
     jobs:
-      - build
+      - build:
+          context: Slack        
       - upload:
           requires:
             - build
