Fighting with YAML (again :( )

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,23 +26,9 @@ jobs:
           paths:
             - "/root/project/_site"
       - slack/notify:
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "plain_text",
-                      "text": "*This is a text notification*",
-                      "emoji": true
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
-
+          channel: ABCXYZ
+          event: fail
+          template: basic_fail_1
 
   upload:
     docker:
