--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             ./update.sh
             # Removing some stubs
             rm -f _cves/CVE-3000-*
-            rm -rf _cases/DIVD-3000-0000*
+            rm -rf _cases/DIVD-3000-0000* _cases/3000/
             jekyll build 2>&1| tee jekyll-build.log;
             ./proof_html.sh 
       - save_cache:
