--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - user: actions/setup-ruby@v1
+      - uses: actions/setup-ruby@v1
       - run: bundle install
