--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-ruby@v1
-      - run: bundle install
+      - run: pwd && ls && bundle install
