--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-ruby@v1
+      - run: bundle install
       - run: ./update.sh
-      - run:  jekyll build  --future 2>&1 | tee jekyll-build.log
+      - run: bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
 
