--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -6,8 +6,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
       - run: bundle install
       - run: ./update.sh
+      - run: rm -rf _cases/3000
       - run: bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v4
+      - uses: ruby/setup-ruby@v1
+      - run: sudo apt-get update -y && sudo apt-get install libcurl4 -y
+      - run: pip3 install html5validator 
+      - run: gem install html-proofer
+      - run: ./proof_html.sh
+
 
