--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
+          with:
+            ruby-version: '2.6' 
       - run: bundle install
       - run: ./update.sh
       - run: rm -rf _cases/3000
@@ -16,7 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v4
+          with:
+            python-version: '3.7'
       - uses: ruby/setup-ruby@v1
+          with:
+            ruby-version: '2.6' 
       - run: sudo apt-get update -y && sudo apt-get install libcurl4 -y
       - run: pip3 install html5validator 
       - run: gem install html-proofer
