--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -26,6 +26,8 @@ jobs:
       - run: sudo apt-get update -y && sudo apt-get install libcurl4 -y
       - run: pip3 install html5validator 
       - run: gem install html-proofer
-      - run: ls && ./proof_html.sh
+      - run: ls 
+      - run: pwd
+      - run: ./proof_html.sh
 
 
