--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -1,5 +1,5 @@
 name: build_website
-run-name: Build, test and deply website
+run-name: Build, test and deply website native
 on: [push]
 jobs:
   build:
