--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           python-version: '3.7'
       - run: ./update.sh
-      - run: rm -rf _cases/3000
+      - run: rm -rf _cases/3000 _cves/CVE-3000-*
       - name: Build
         uses: jerryjvl/jekyll-build-action@v1
       - run: sudo apt-get update -y && sudo apt-get install libcurl4 -y
