--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -20,5 +20,11 @@ jobs:
       - run: pip3 install html5validator 
       - run: gem install --no-document html-proofer
       - run: ./proof_html.sh
+      - name: 'Upload Artifacts'
+        uses: actions/upload-artifact@v3
+        with:
+          name: html
+          path: _site/**
+          retention-days: 1    
 
 
