--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -5,20 +5,27 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ruby/setup-ruby@v1
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6' 
-      - uses: actions/setup-python@v4
+      - name: Install python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.7'
-      - run: ./update.sh
-      - run: rm -rf _cases/3000 _cves/CVE-3000-*
+      - name: Update external content
+        run: ./update.sh
+      - name: Clean up stubs
+        run: rm -rf _cases/3000 _cves/CVE-3000-*
       - name: Build
-        uses: jerryjvl/jekyll-build-action@v1
-      - run: pip3 install html5validator 
-      - run: gem install --no-document html-proofer
-      - run: ./proof_html.sh
+        #uses: jerryjvl/jekyll-build-action@v1
+        run: bundle install && bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+      - name: install prerequisites
+        run: pip3 install html5validator && gem install --no-document html-proofer
+      - name: Test HTML code
+        run: ./proof_html.sh
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v3
         with:
