--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -16,16 +16,15 @@ jobs:
         with:
           python-version: '3.7'
       - name: Update external content
-        run: ./update.sh
+        run:  ./update.sh
       - name: Clean up stubs
-        run: rm -rf _cases/3000 _cves/CVE-3000-*
+        run:  rm -rf _cases/3000 _cves/CVE-3000-*
       - name: Build
-        #uses: jerryjvl/jekyll-build-action@v1
-        run: time MAKE="make -j4" bundle install --jobs=4 && bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
+        run:  MAKE="make -j4" bundle install --jobs=4 && bundle exec jekyll build  --future 2>&1 | tee jekyll-build.log
       - name: install prerequisites
-        run: pip3 install html5validator && gem install --no-document html-proofer
+        run:  pip3 install html5validator && gem install --no-document html-proofer
       - name: Test HTML code
-        run: ./proof_html.sh
+        run:  ./proof_html.sh
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v3
         with:
@@ -47,7 +46,7 @@ jobs:
         with:
           switches: -avzr --delete
           path: .
-          remote_path: htdocs/csirt-divd-nl2
+          remote_path: htdocs/csirt-divd-nl
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_user: ${{ secrets.DEPLOY_USER }}
           remote_key: ${{ secrets.DEPLOY_KEY_CSIRT }}
