--- a/.github/workflows/build_pages_native.yml
+++ b/.github/workflows/build_pages_native.yml
@@ -1,6 +1,13 @@
 name: build_test_deploy
 run-name: Build, test and deploy website (if needed)
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -10,7 +17,7 @@ jobs:
       - name: Install ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.6' 
+          ruby-version: '3.0' 
       - name: Install python
         uses: actions/setup-python@v4
         with:
@@ -25,28 +32,14 @@ jobs:
         run:  pip3 install html5validator && gem install --no-document html-proofer
       - name: Test HTML code
         run:  ./proof_html.sh
-      - name: 'Upload Artifacts'
-        uses: actions/upload-artifact@v3
-        with:
-          name: html
-          path: _site/**
-          retention-days: 1
-  deploy:
-    needs: build_and_test
-    runs-on: ubuntu-latest
-    if: "github.ref == 'refs/heads/main'"
-    steps:
-      - name: Download html
-        uses: actions/download-artifact@v3
-        with:
-          name: html
-      - run: ls
       - name: rsync deploy
         uses: burnett01/rsync-deployments@5.2.1
+        if:   ${{ github.ref == 'refs/heads/main' }}
         with:
           switches: -avzr --delete
-          path: .
+          path: _site/
           remote_path: htdocs/csirt-divd-nl
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_user: ${{ secrets.DEPLOY_USER }}
           remote_key: ${{ secrets.DEPLOY_KEY_CSIRT }}
+
