Add reports to /csv/cases.txt

--- a/_config.yml
+++ b/_config.yml
@@ -41,10 +41,13 @@ webrick:
 collections:
   team:
     output: false
+  reports:
+    output: false
   cves:
     output: true
   cases:
     output: true
+
 
 defaults:
   -
